--- a/src/OpenFTTH.DesktopBridge/OpenFTTH.DesktopBridge.csproj
+++ b/src/OpenFTTH.DesktopBridge/OpenFTTH.DesktopBridge.csproj
@@ -14,6 +14,9 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.Debug" Version="1.0.1" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
+    <PackageReference Include="Topos" Version="0.0.73" />
+    <PackageReference Include="Topos.Kafka" Version="0.0.73" />
+    <PackageReference Include="Topos.Serilog" Version="0.0.73" />
   </ItemGroup>
 
 </Project>
