--- a/src/OpenFTTH.DesktopBridge/OpenFTTH.DesktopBridge.csproj
+++ b/src/OpenFTTH.DesktopBridge/OpenFTTH.DesktopBridge.csproj
@@ -17,6 +17,7 @@
     <PackageReference Include="Topos" Version="0.0.73" />
     <PackageReference Include="Topos.Kafka" Version="0.0.73" />
     <PackageReference Include="Topos.Serilog" Version="0.0.73" />
+    <PackageReference Include="Topos.NewtonsoftJson" Version="0.0.73" />
   </ItemGroup>
 
 </Project>
