--- a/src/OpenFTTH.DesktopBridge/OpenFTTH.DesktopBridge.csproj
+++ b/src/OpenFTTH.DesktopBridge/OpenFTTH.DesktopBridge.csproj
@@ -6,6 +6,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
+    <PackageReference Include="mediatr" Version="8.1.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.8" />
     <PackageReference Include="NetCoreServer" Version="3.0.20" />
     <PackageReference Include="Serilog" Version="2.10.0" />
