--- a/test/OpenFTTH.DesktopBridge.Tests/OpenFTTH.DesktopBridge.Tests.csproj
+++ b/test/OpenFTTH.DesktopBridge.Tests/OpenFTTH.DesktopBridge.Tests.csproj
@@ -11,6 +11,13 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="FakeItEasy" Version="6.1.0" />
+    <PackageReference Include="mediatr" Version="8.1.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\src\OpenFTTH.DesktopBridge\OpenFTTH.DesktopBridge.csproj" />
   </ItemGroup>
 
 </Project>
