--- a/src/OpenFTTH.DesktopBridge/OpenFTTH.DesktopBridge.csproj
+++ b/src/OpenFTTH.DesktopBridge/OpenFTTH.DesktopBridge.csproj
@@ -2,14 +2,14 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
-    <PackageReference Include="mediatr" Version="8.1.0" />
-    <PackageReference Include="Microsoft.Extensions.Hosting" Version="3.1.8" />
-    <PackageReference Include="NetCoreServer" Version="3.0.20" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
+    <PackageReference Include="mediatr" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
+    <PackageReference Include="NetCoreServer" Version="5.0.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     <PackageReference Include="Newtonsoft.Json.Bson" Version="1.0.2" />
     <PackageReference Include="Serilog" Version="2.10.0" />
@@ -18,10 +18,10 @@
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.Debug" Version="1.0.1" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
-    <PackageReference Include="Topos" Version="0.0.84" />
-    <PackageReference Include="Topos.Kafka" Version="0.0.84" />
-    <PackageReference Include="Topos.Serilog" Version="0.0.84" />
-    <PackageReference Include="Topos.NewtonsoftJson" Version="0.0.84" />
+    <PackageReference Include="Topos" Version="0.0.88" />
+    <PackageReference Include="Topos.Kafka" Version="0.0.88" />
+    <PackageReference Include="Topos.Serilog" Version="0.0.88" />
+    <PackageReference Include="Topos.NewtonsoftJson" Version="0.0.88" />
     <PackageReference Include="OpenFTTH.Events" Version="2.1.2" />
   </ItemGroup>
 
