--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,6 +15,14 @@ executors:
         auth:
           username: $DOCKER_LOGIN
           password: $DOCKER_ACCESSTOKEN
+  alpine-git:
+    environment:
+      IMAGE_NAME: openftth/desktop-bridge
+    docker:
+    - image: alpine/git
+      auth:
+        username: $DOCKER_LOGIN
+        password: $DOCKER_ACCESSTOKEN
 
 jobs:
   build-app:
@@ -76,6 +84,36 @@ jobs:
            docker tag $IMAGE_NAME:latest $IMAGE_NAME:$IMAGE_TAG
            docker push $IMAGE_NAME:latest
            docker push $IMAGE_NAME:$IMAGE_TAG
+
+  update-helm-chart:
+    executor: alpine-git
+    steps:
+      - checkout
+      - add_ssh_keys:
+          fingerprints:
+            - "15:c2:8d:56:8d:09:e5:25:e7:73:d9:eb:5f:f5:c5:1f"
+      - run:
+          name: key-scan
+          command: ssh-keyscan github.com >> ~/.ssh/known_hosts
+      - run:
+          name: git clone open-ftth-chart
+          command: git clone git@github.com:DAXGRID/open-ftth-chart.git
+      - run:
+          name: package and push
+          command: |
+             apk add bash
+             IMAGE_TAG_NO_V=${CIRCLE_TAG:1}
+             cd ./open-ftth-chart
+             git config user.email "admin@dax.dk"
+             git config user.name "dax-bot"
+             sed -i "/appVersion:.*/c\appVersion: \"$IMAGE_TAG_NO_V\"" ./openftth/charts/desktop-bridge/Chart.yaml
+             sed -i "/  tag:.*/c\  tag: v$IMAGE_TAG_NO_V" ./openftth/charts/desktop-bridge/values.yaml
+             CHART_VERSION="$(./scripts/increment-chart-number.sh "$(grep -w '^version:' ./openftth/Chart.yaml)" bug)"
+             sed -i "/^version:.*/c\version: $CHART_VERSION" ./openftth/Chart.yaml
+             git add .
+             git commit -m "upgrades $IMAGE_NAME to version $CHART_VERSION"
+             git push
+
 workflows:
   build-test-upload_image:
     jobs:
@@ -102,6 +140,15 @@ workflows:
            - build-app
            - test-app
            - build-docker-image
+          filters:
+            tags:
+              only: /^v.*/
+            branches:
+              ignore: /.*/
+      - update-helm-chart:
+          context: docker
+          requires:
+           - docker-publish-image
           filters:
             tags:
               only: /^v.*/
