switch to using notification server instead of kafka
can now receive geographical area updated events

--- a/src/OpenFTTH.DesktopBridge/OpenFTTH.DesktopBridge.csproj
+++ b/src/OpenFTTH.DesktopBridge/OpenFTTH.DesktopBridge.csproj
@@ -9,18 +9,14 @@
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="9.0.0" />
     <PackageReference Include="mediatr" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
-    <PackageReference Include="NetCoreServer" Version="5.1.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="NetCoreServer" Version="6.7.0" />
+    <PackageReference Include="OpenFTTH.NotificationClient" Version="0.2.0" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
     <PackageReference Include="Serilog.Sinks.Debug" Version="1.0.1" />
     <PackageReference Include="Serilog.Formatting.Compact" Version="1.1.0" />
-    <PackageReference Include="Topos" Version="0.0.98" />
-    <PackageReference Include="Topos.Kafka" Version="0.0.98" />
-    <PackageReference Include="Topos.Serilog" Version="0.0.98" />
-    <PackageReference Include="Topos.NewtonsoftJson" Version="0.0.98" />
     <PackageReference Include="OpenFTTH.Events" Version="2.1.2" />
   </ItemGroup>
 
